inserted b2j gradle config